# livekit-openai-realtime-demo

./: .env.example  .gitignore  CLAUDE.md  LINKEDIN_ARTICLE.md  LINKEDIN_ARTICLE_LINKEDIN_SAFE.md  MEMORY.md  PLAN.md  PLAN10.md  PLAN11.md  PLAN12.md  PLAN13.md  PLAN14.md  PLAN15.md  PLAN16.md  PLAN17.md  PLAN18.md  PLAN19.md  PLAN2.md  PLAN20.md  PLAN21.md  PLAN22.md  PLAN23.md  PLAN3.md  PLAN4.md  PLAN5.md  PLAN6.md  PLAN7.md  PLAN8.md  PLAN9.md  PLAN_SUPABASE_LOCAL.md  README.md  docker-compose.override.yml  docker-compose.yml  livekit.yaml
agent/: Dockerfile  __init__.py  conftest.py  main.py  pyproject.toml
agent/agents/: base.py  english_agent.py  history_agent.py  math_agent.py  orchestrator.py
agent/models/: session_state.py
agent/services/: guardrail.py  human_escalation.py  langfuse_setup.py  transcript_store.py
agent/tests/: conftest.py  test_agent_handoffs.py  test_agent_voices.py  test_guardrail.py  test_guardrail_tts_node.py  test_handoff_question_context.py  test_langfuse_otel_coverage.py  test_orchestrator_routing.py  test_routing_speaking_agent.py  test_session_integration.py  test_session_state.py  test_synthetic_routing.py  test_transcript_publishing.py  test_transcript_speaker.py
agent/tests/fixtures/: __init__.py  synthetic_questions.py
agent/tests/integration/: conftest.py  test_guardrail.py  test_guardrail_security.py  test_llm.py  test_tts_stt.py
agent/tools/: __init__.py  routing.py
clickhouse/: listen.xml
frontend/: Dockerfile  next.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  (+1 more)
(+35 files in other folders)
